Archive2/01/cff49e39d4829c/output
In file included from /usr/local/include/c++/4.9.2/thread:39:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/functional: In instantiation of 'struct std::_Bind_simple<void (*(int))(int&)>':
/usr/local/include/c++/4.9.2/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(int&); _Args = {int&}]'
main.cpp:15:31:   required from here
/usr/local/include/c++/4.9.2/functional:1665:61: error: no type named 'type' in 'class std::result_of<void (*(int))(int&)>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/local/include/c++/4.9.2/functional:1695:9: error: no type named 'type' in 'class std::result_of<void (*(int))(int&)>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
